java/java-tests/testData/codeInsight/daemonCodeAnalyzer/javaDoc/ParameterizedTypes.java
import java.util.List;

/// @see #read(List)
/// @see #<error descr="Cannot resolve symbol 'read(List<Integer>)'">read</error>(List<Integer>)
/// @see #read(List<String>)
class Test {
  void read(List<String> input) {}
}